--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node scr/bot/index.js",
     "dev": "nodemon scr/bot/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "puppeteer install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
