--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sparticuz/chromium": "^132.0.0",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "crypto": "^1.0.1",
@@ -21,7 +22,7 @@
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "puppeteer": "^23.11.1",
+    "puppeteer-core": "^24.2.1",
     "sequelize": "^6.37.5",
     "telegraf": "^4.16.3",
     "winston": "^3.17.0"
