--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/bot/index.js",
   "scripts": {
     "build": "node src/bot/index.js",
-    "dev": "nodemon src/bot/index.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@sparticuz/chromium": "^123.0.0",
+    "@sparticuz/chromium": "^123.0.1",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "crypto": "^1.0.1",
@@ -22,7 +22,8 @@
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "puppeteer-core": "^22.11.0",
+    "puppeteer": "^24.2.1",
+    "puppeteer-core": "^22.15.0",
     "sequelize": "^6.37.5",
     "telegraf": "^4.16.3",
     "winston": "^3.17.0"
